--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -13,7 +13,7 @@
     overflow: hidden;
 
     width: 100%;
-    height: 100px;
+    height: 100%;
 
     margin: 0;
     padding: 0;
@@ -23,7 +23,7 @@
     composes: clearfix;
 
     position: relative;
-
+    height: 100%;
     margin-left: 30px;
 }
 
@@ -31,7 +31,7 @@
     composes: clearfix;
 
     position: relative;
-
+    height: 100%;
     margin: 0;
 
     list-style-type: none;
@@ -51,9 +51,9 @@
     overflow: hidden;
 
     width: 60px;
-    height: 80px;
+    height: 100%;
     margin: 0 1px;
-    padding: 10px 0;
+    padding: 0;
 
     cursor: pointer;
 
@@ -131,7 +131,7 @@
     position: relative;
 
     width: 30px;
-    padding: 10px 0;
+    padding: 0;
     margin: 0;
 
     color: #29a9d8;
