--- a/src/carousel.scss
+++ b/src/carousel.scss
@@ -19,21 +19,15 @@
     padding: 0;
 }
 
-.visible-window {
+.carousel {
     composes: clearfix;
 
     position: relative;
     height: 100%;
-    margin-left: 30px;
-}
-
-.items-list {
-    composes: clearfix;
-
-    position: relative;
-    height: 100%;
+    width: 100%;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 
     list-style-type: none;
 
@@ -43,11 +37,11 @@
 .cell {
     font: 16px/22px 'helvetica-neue', 'Helvetica Neue', Helvetica, Arial, Sans-Serif;
 
-    position: absolute;
+    position: relative;
 
     z-index: 1;
 
-    display: inline-block;
+    display: list-item;
     float: left;
     overflow: hidden;
 
@@ -55,6 +49,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    list-style: none;
 
     cursor: pointer;
 
@@ -98,7 +93,7 @@
 
 .control-cell {
     composes: cell clearfix;
-
+    display: block;
     position: relative;
 
     width: 30px;
@@ -110,12 +105,6 @@
 
 .control-cell-next {
     composes: control-cell;
-
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    float: right;
 }
 
 .control-cell-previous {
@@ -149,8 +138,6 @@
 
 .control-icon-next {
     composes: control-icon;
-
-    z-index: 2;
 
     left: 35%;
 
